# roles.data

./: .env.dev  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NAMING_CONVENTIONS.md  PRESENTATION.md  Procfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.github/workflows/: create-deploy-release.yml  docker-config-test.yml  integration_tests.yml
admin/: create-service-account.py  create-service-provider.py  update-service-account.py  utils.py
db/: __init__.py  entrypoint.sh
db/initdb/: 0-init.sql  1-provisionning.sql  1-test-provisionning.sql  create.sql  schema.sql
db/migrate/: 0-init.sql
db/migrations/: 20250501.sql  20250515.sql  20250519.sql  20250604.sql  20250605.sql  20250624.sql  20250625.sql  20250709.sql  20250717.sql  20250801.sql  20250803.sql  20250812.sql  20250813.sql  20250814.sql  20250815.sql  20250917.sql  20251017_update_datapass_urls.sql  20251020_add_proconnect_client_id.sql  20251022_remove_is_verified.sql  20251505.sql  20260218_rename_effectifs_scope.sql  20260218_split_conformite_scope.sql
db/scripts/: create.sh  migrate.sh  schema.sh  seed.sh
db/seed/: seed.sql
src/: auth.py  config.py  constants.py  database.py  dependencies.py  documentation.py  main.py  model.py  models.py
src/auth/: datapass.py  pro_connect.py
src/dependencies/: __init__.py  context.py  datapass.py  (+5 more)
static/: dsfr.min.css
templates/: base.html  base_admin.html  base_ui.html  home.html  layout.html  template_manager.py
(+143 files in other folders)
